--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/user-event": "^7.2.1",
     "autoprefixer": "^9.8.6",
     "postcss-cli": "^7.1.1",
+    "quill": "^1.3.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-quill": "^1.3.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "tailwindcss": "^1.7.3"
