--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "redux": "^4.0.5",
     "redux-firestore": "^0.13.0",
     "redux-thunk": "^2.3.0",
-    "tailwindcss": "^1.8.5"
+    "tailwindcss": "^1.8.5",
+    "uuid": "^8.3.1"
   },
   "scripts": {
     "start": "npm run watch:css && react-scripts start",
