--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "redux": "^4.0.5",
     "redux-firestore": "^0.13.0",
     "redux-thunk": "^2.3.0",
+    "sweetalert2": "^10.6.1",
     "tailwindcss": "^1.8.5",
     "uuid": "^8.3.1"
   },
