--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "uuid": "^8.3.1"
   },
   "scripts": {
-    "start": "npm run watch:css && react-scripts start",
+    "start": "react-scripts start",
     "build": "npm run build:css && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
