--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "autoprefixer": "^9.8.6",
+    "customize-cra": "^1.0.0",
     "firebase": "^7.20.0",
     "postcss-cli": "^7.1.1",
     "quill": "^1.3.6",
     "react": "^16.13.1",
+    "react-app-rewired": "^2.1.6",
     "react-dom": "^16.13.1",
     "react-quill": "^1.3.5",
     "react-redux": "^7.2.1",
