--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "autoprefixer": "^9.8.6",
     "customize-cra": "^1.0.0",
     "firebase": "^7.20.0",
+    "firebase-tools": "^8.15.0",
     "postcss-cli": "^7.1.2",
     "quill": "^1.3.6",
     "react": "^16.13.1",
